--- a/src/pages/Project/ProjectPage.css
+++ b/src/pages/Project/ProjectPage.css
@@ -1,6 +1,5 @@
 /********************** Proyectos **********************/
 
-
 #proyectos .proyect-site {
   overflow-x: hidden !important;
 }
@@ -16,6 +15,7 @@
 
 .proyectos .proyectos-slider .caja img {
   width: 100%;
+  height: 30vh;
   opacity: 0.5;
   transform: scale(0.8);
 }
@@ -71,7 +71,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  margin: 1rem 0; 
+  margin: 1rem 0;
 }
 
 /********************** Proyectos seccion **********************/
@@ -205,7 +205,6 @@
   margin: 5rem 2rem 0 0;
 }
 
-
 .boton-cerrar {
   position: absolute;
   top: 3px;
@@ -246,11 +245,11 @@
 
 .eins-modal-text-2 {
   padding: 5rem 0 2rem;
-  font-size: 1.5rem!important;
+  font-size: 1.5rem !important;
 }
 
 .eins-modal-text-2 a {
-  color: var(--secundario);
+  color: var(--secondary);
 }
 
 .eins-modal-tec img {
@@ -258,7 +257,6 @@
   height: 3rem;
   margin: 1rem 2rem 1rem 0;
 }
-
 
 .eins-modal-tec-2 img {
   width: 2.8rem;
@@ -316,7 +314,7 @@
       "img-9 img-10"
       "img-12 img-11"
       "img-13 img-14"
-      "img-15 img-16"
+      "img-15 img-16";
   }
 
   .projects__item img {
