--- a/src/pages/About/AboutPage.css
+++ b/src/pages/About/AboutPage.css
@@ -98,6 +98,9 @@ section .row {
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   gap: 1.5rem;
 }
+#experience {
+  grid-template-columns: repeat(3, minmax(35rem, 1fr));
+}
 
 section .row .columns {
   display: flex;
