--- a/src/pages/About/AboutPage.css
+++ b/src/pages/About/AboutPage.css
@@ -95,11 +95,11 @@ body.dark .buttonDownload:hover {
 
 section .row {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
   gap: 1.5rem;
 }
 #experience {
-  grid-template-columns: repeat(autofit, minmax(35rem, 1fr));
+  grid-template-columns: repeat(autofit, minmax(40rem, 1fr));
 }
 
 section .row .columns {
@@ -224,13 +224,22 @@ section .row .columns .skill img:hover {
   align-items: flex-end;
   -webkit-align-items: flex-end;
 }
+.sobre-mi-info {
+  padding: 2rem 2rem 0 2rem;
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: var(--box-shadow);
+  border: var(--borde);
+  border-radius: 0.5rem;
+  border: 4px dashed var(--tertiary);
+}
 
 .sobre-mi-info p {
   color: #000;
-  font-size: 1.7rem;
+  font-size: 2rem;
   line-height: 2;
   text-transform: none;
   padding-bottom: 1rem;
+  text-align: justify;
 }
 
 .sobre-mi-info .btn-info {
